# sel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md
.github/workflows/: ci.yml  release.yml
benches/: large_file.rs
src/: cli.rs  error.rs  lib.rs  main.rs  output.rs  reader.rs  selector.rs
tests/: basic.rs  context.rs  multi_file.rs  positions.rs  regex.rs  selectors.rs
